# aind-dataverse-service

./: README.md  openapirc.json  openapirc_async.json
aind-dataverse-service-async-client/: README.md  pyproject.toml  setup.py  tox.ini
aind-dataverse-service-async-client/.openapi-generator/: FILES
aind-dataverse-service-async-client/aind_dataverse_service_async_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
aind-dataverse-service-async-client/aind_dataverse_service_async_client/api/: __init__.py  default_api.py  healthcheck_api.py
aind-dataverse-service-async-client/docs/: DefaultApi.md  EntityTableRow.md  HTTPValidationError.md  HealthCheck.md  HealthcheckApi.md  ValidationError.md  ValidationErrorLocInner.md
aind-dataverse-service-async-client/test/: test_default_api.py  test_entity_table_row.py  test_health_check.py  test_healthcheck_api.py  test_http_validation_error.py  test_validation_error.py  test_validation_error_loc_inner.py
aind-dataverse-service-client/: README.md  pyproject.toml  setup.py  tox.ini
aind-dataverse-service-client/.openapi-generator/: FILES
aind-dataverse-service-client/aind_dataverse_service_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
aind-dataverse-service-client/docs/: DefaultApi.md  EntityTableRow.md  HTTPValidationError.md  HealthCheck.md  HealthcheckApi.md  ValidationError.md  ValidationErrorLocInner.md
aind-dataverse-service-client/test/: test_default_api.py  test_entity_table_row.py  test_health_check.py  test_healthcheck_api.py  test_http_validation_error.py  test_validation_error.py  test_validation_error_loc_inner.py
aind-dataverse-service-server/: Dockerfile  README.md  pyproject.toml
aind-dataverse-service-server/.github/workflows/: tag_and_publish.yml  test_server.yml
aind-dataverse-service-server/src/aind_dataverse_service_server/: __init__.py  configs.py  main.py  models.py  route.py
aind-dataverse-service-server/tests/: conftest.py  test_configs.py  test_handler.py  test_main.py  test_models.py  test_route.py  test_session.py
scripts/: generate_openapi.py
(+15 files in other folders)
