[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-dataverse-service-server"
description = "Package to serve data from Dataverse through PowerAutomate."
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    'allen-powerplatform-client>=0.1.0',
    'aind-settings-utils>=0.0.3',
    'httpx',
    'pydantic>=2.0',
    'pydantic-settings>=2.0',
    'fastapi[standard]>=0.114.0',
    'azure-identity>=1.15.0',
    'fastapi-cache2[redis]>=0.2.2',
]

[project.optional-dependencies]
dev = [
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'furo',
    'pytest',
    'pytest-env',
    'pytest-mock',
    'pytest_asyncio',
    'pytest-httpx'
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aind_dataverse_service_server.__version__"}

[tool.black]
line-length = 79
target_version = ['py310']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["aind_dataverse_service_server", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "^from .* import .*",
    "^import .*",
    "pragma: no cover"
]
fail_under = 100

[tool.isort]
line_length = 79
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 100

[tool.pytest.ini_options]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="function"
env = [
    "DATAVERSE_HOST=http://example.com",
    "DATAVERSE_TENANT_ID=example_tenant_id",
    "DATAVERSE_CLIENT_ID=example_client_id", 
    "DATAVERSE_CLIENT_SECRET=example_client_secret"
]
